Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48881

tst_qsslsocket::sessionCipher fails on OS X 10.11 (Secure Transport backend)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.5.1, 5.6
    • Network: SSL
    • None
    • OS X 10.11, Secure Transport back-end.
    • macOS
    • f32f75ae1b9b720a208a35fdc708ed9649c29a3a

    Description

      FAIL! : tst_QSslSocket::sessionCipher(WithoutProxy) '!socket->sessionCipher().isNull()' returned FALSE. ()
      Loc: [tst_qsslsocket.cpp(764)]
      FAIL! : tst_QSslSocket::sessionCipher(WithSocks5Proxy) '!socket->sessionCipher().isNull()' returned FALSE. ()
      Loc: [tst_qsslsocket.cpp(764)]
      FAIL! : tst_QSslSocket::sessionCipher(WithSocks5ProxyAuth) '!socket->sessionCipher().isNull()' returned FALSE. ()
      Loc: [tst_qsslsocket.cpp(764)]
      FAIL! : tst_QSslSocket::sessionCipher(WithHttpProxy) '!socket->sessionCipher().isNull()' returned FALSE. ()
      Loc: [tst_qsslsocket.cpp(764)]
      FAIL! : tst_QSslSocket::sessionCipher(WithHttpProxyBasicAuth) '!socket->sessionCipher().isNull()' returned FALSE. ()
      Loc: [tst_qsslsocket.cpp(764)]

      Attachments

        For Gerrit Dashboard: QTBUG-48881
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes